--- a/root/templates/member/timeline.tt
+++ b/root/templates/member/timeline.tt
@@ -1,17 +1,9 @@
-		<h1>Spring Session 2009 Time Line</h1>
+		<h1>Winter Session 2010 Time Line</h1>
 
-<p>Feb. 8 Proposal Form for Spring Programs Available</p>
+<p>October 25: Proposal Form and Alternate Contribution for Winter Programs Available</p>
 
-<p>Feb. 15 Proposal Deadline</p>
+<p>November 1: Proposal Deadline</p>
 
-<p>Feb. 18 Member Fees Due (for spring session)</p>
-
-<p>March 9 Enrollment begins</p>
-
-<p>March 13 Winter Session Ends</p>
-
-<p>March 16 Enrollment Deadline</p>
-
-<p>March 30 Enrollment Announced</p>
+<p>January 4 - March 12, 2010: Winter Session (10 weeks)<p>
 
 
