--- a/root/templates/member/proposal.tt
+++ b/root/templates/member/proposal.tt
@@ -154,11 +154,10 @@ how many students you are willing to take.
 		      <li>Please be very clear and think carefully when filling out this field. The web form may not have specific fields for all you need to include, please add the information in other appropriate locations on the form. </li>
 		      <li>If your program is less than 8 weeks in length, do you have a preference for when it starts? </li>
 
-		      <li>Leaders can contact Sharon Berger to update their available days/times prior to scheduling.<br>
-          Sharon Berger:<br>
-sa.berger@frontiernet.net<br>
-h: 659-3567<br>
-c: 592-4649<br></li>
+		      <li>Leaders can contact Gina Varrichio to update their available days/times prior to scheduling.<br>
+          Gina Varrichio:<br>
+zealth_1@yahoo.com<br>
+</li>
 		      <li><b>If a program requires set up and or clean up time,</b> please add these
 requirements with specifics amounts of time to the days/times field.
 Leaders holding programs in the conference room and gym will need to
