--- a/root/templates/member/timeline.tt
+++ b/root/templates/member/timeline.tt
@@ -1,17 +1,10 @@
-		<h1>Spring Session 2009 Time Line</h1>
+		<h1>Spring Session 2010 Time Line</h1>
 
-<p>Feb. 8 Proposal Form for Spring Programs Available</p>
-
-<p>Feb. 15 Proposal Deadline</p>
-
-<p>Feb. 18 Member Fees Due (for spring session)</p>
-
-<p>March 9 Enrollment begins</p>
-
-<p>March 13 Winter Session Ends</p>
-
-<p>March 16 Enrollment Deadline</p>
-
-<p>March 30 Enrollment Announced</p>
-
+<p>February 15: Program Proposal and Alternate Contribution Forms Available</p>
+<p>February 22: Program Proposals due</p>
+<p>March 12: Winter Classes End</p>
+<p>March 15: Enrollment Begins</p>
+<p>March 22: Enrollment Deadline</p>
+<p>April 5: Enrollment results announced</p>
+<p>April 12 - June 4, 2010: Spring Session (8 weeks)<p>
 
