add back changes

--- a/root/templates/member/contacts.tt
+++ b/root/templates/member/contacts.tt
@@ -97,8 +97,8 @@
   </tr>
   <tr>
     <td>Scheduling Coordinator</td>  
-    <td>Sharon Berger</td>
-    <td><a href="mailto:sa.berger@frontiernet.net">sa.berger@frontier.net</a></td>
+    <td>Gina Varrichio</td>
+    <td><a href="mailto:zealth_1@yahoo.com">zealth_1@yahoo.com</a></td>
     <td>659-3567</td>
   </tr>
   <tr>
