--- a/root/templates/membership.tt
+++ b/root/templates/membership.tt
@@ -1,9 +1,7 @@
 <h1>Membership at the Learning Center</h1>
 <p>To find out more information about membership, 
 please contact 
-Tamara Thomas at (thistleluna@yahoo.com, 315-497-0929)
-or 
-Jane Makarchuk (256-7553, dazyjane@gmail.com). 
+Poppy Singer at poppys@twcny.rr.com or 607-273-4041.
 Normally members must join at the beginning of a session; 
 sometimes there will be a waiting list.</p>
 
