--- a/root/templates/member/old_activities.tt
+++ b/root/templates/member/old_activities.tt
@@ -4,8 +4,15 @@
 <p><a href="[% c.uri_for('/program_list', 6) %]">Winter 2007</a></p>
 <p><a href="[% c.uri_for('/program_list', 7) %]">Spring 2007</a></p>
 <p><a href="[% c.uri_for('/program_list', 9) %]">Fall 2007</a></p>
+
 <p><a href="[% c.uri_for('/program_list', 10) %]">Winter 2008</a></p>
 <p><a href="[% c.uri_for('/program_list', 11) %]">Spring 2008</a></p>
 <p><a href="[% c.uri_for('/program_list', 13) %]">Fall 2008</a></p>
+
 <p><a href="[% c.uri_for('/program_list', 14) %]">Winter 2009</a></p>
+<p><a href="[% c.uri_for('/program_list', 15) %]">Spring 2009</a></p>
+<p><a href="[% c.uri_for('/program_list', 17) %]">Fall 2009</a></p>
+
+<p><a href="[% c.uri_for('/program_list', 18) %]">Winter 2010</a></p>
+<p><a href="[% c.uri_for('/program_list', 19) %]">Spring 2010</a></p>
 
