updates to enrollment info

--- a/root/templates/member/enroll/index.tt
+++ b/root/templates/member/enroll/index.tt
@@ -16,15 +16,25 @@
 
 <p><strong>Please consider the following points when enrolling:</strong>
 <ul>
-<li>Are the programs you are enrolling in suitable for your child? Read the description carefully, especially the &#8220;Children Requirements&#8221;.<strong> Contact the leader if you have any questions.</strong></li>
+<li>Are the programs you are enrolling in suitable for your child? Read the description carefully, 
+especially the &#8220;Children Requirements&#8221;.<strong> Contact the leader if you have any questions.</strong>
+You must contact an enrollment coordinator (
+Jennifer Moran at <a href="mailto:sharingminds@verizon.net">sharingminds@verizon.net</a>, 257-5020
+or Lauren Korfine at <a href="mailto:lk79@cornell.edu">lk79@cornell.edu</a>, 256-0132
+) to get permission for enrollment if your child is not within the age range listed.
+</li>
 <li>Be realistic about the number of programs your family can comfortably attend. Leaders plan their classes based on the number of children enrolled. When families enroll and then decide not to attend without notification, it is discouraging and inconvenient for the leader.</li>
 <li>Many programs utilize outside professionals and organizations. It is important to maintain a good reputation as an organization so that we can continue to utilize these and other opportunities. This includes paying for programs on time, committing to attendance, and enrolling students that are a good match for the program.</li>
 <li>If you need to drop out of a program, please contact the leader of the program as soon as you can. No explanation is necessary. Many classes have a waiting list, telling the leader you are dropping a class may give someone else a chance to participate.</li>
+<li><b>Your children will only be allowed to attend programs if a parent or other consenting adult is on
+site to supervise them. Only enrol your child(ren) in programs at times during which you will be
+able to provide supervision.</b>
+</li>
 </ul>
 <h2>Some Frequently Asked Questions</h2>
 
 <P><b>What is the program enrollment process?</b><br>
-If a program receives more requests than the maximum number of participants, children with the highest interest ranking will get in first, and those with the lowest interest will be waitlisted. Leader’s and Parent Assistant’s children are always accepted if they sign up for their parent’s class.</p>
+If a program receives more requests than the maximum number of participants, children with the highest interest ranking will get in first, and those with the lowest interest will be waitlisted. Leader’s and Parent Assistant’s children are always accepted if they sign up for their parent’s class (using a ranking of "0".</p>
 
 
 <p><b>Are children ‘automatically’ signed up for programs that their parents are leading?</b><br>
@@ -35,12 +45,18 @@ No - if your child wants to attend a class that you are leading, you should sign
 Yes. However, for classes that have no size limit, you can type a ‘99′ (ninety-nine) next to any programs that your kids are signing up for on the enrollment form, where waitlisting is not a concern.</p>
 
 <p><b>What if I have more than one child who wishes to enroll in a class?</b><br>
-It's best if both children can give the class the same ranking, if it is very important to your family that multiple childen do (or don't) get into the same class.  The enrollment coordinators build the waitlists based on ranking, so if one child ranks the class very high, but the other ranks it very low, the lower ranking sibling may be waitlisted.</p>
+It's best if both children can give the class the same ranking, if it is very important 
+to your family that multiple childen get into the same class.  The enrollment coordinators 
+build the waitlists based on ranking, so if one child ranks the class very high, but the other 
+ranks it very low, the lower ranking sibling may be waitlisted.</p>
 
 <p><b>Does the number of classes we enroll in affect our enrollment status?</b><br>
 No and yes.  In most cases, the enrollment coordinators only look at the rankings and not how many classes a child is enrolled in.  However, when making hard decisions between children who have given a class the <b>same</b> ranking, they make take the number of classes a child is enrolling in into consideration.</p>
 <p><b>Are families who have previously enrolled in a class given priority?</b><br>
-Generally no. Leaders who plan to give priority to previously enrolled children need to note this in their proposals.  These cases are EXCEPTIONS and are generally discouraged unless there are specific reasons for prioritizing previously enrolled children.</p>
+Generally no. Leaders who plan to give priority to previously enrolled children need to note this 
+in their proposals and must receive permission from the board for these exceptions during
+the scheduling process.
+These cases are EXCEPTIONS and are generally discouraged unless there are specific reasons for prioritizing previously enrolled children.</p>
 
 
 <p>Thank you!</p>
