update contribution and proposal pages

--- a/root/templates/member/contribution.tt
+++ b/root/templates/member/contribution.tt
@@ -5,6 +5,7 @@ The only choices for an alternate contribution are:
 <li>Serving on the Board of Directors</li>
 <li>Serving in a coordinator position</li>
 <li>Co-leading a program- please enter the name of the program you will be co-leading. Co-leaders must take an equal role in leading a program in order to fulfill the contribution requirement.</li>
+<li>Equivalent combinations of contributions are acceptable.</li>
 <li>A contribution for which you have received prior board approval.</li>
 <li>New members are exempt from this contribution for their first session and should enter New Member in this form.</li>
 </ul>
